feat(order) - add getById endpoint and service method. refactor cartService.